name:                VoiceroidSubtitleExoCreator
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/VoiceroidSubtitleExoCreator#readme
license:             BSD3
license-file:        LICENSE
author:              mamunine
maintainer:          mamunabo@hotmail.co.jp
copyright:           2017 mamunine
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AudioObject
                     , TextObject
                     , Config
                     , Config.Ast
                     , Config.Parser
                     , Util
                     , Exo.Exo
                     , Exo.Printer
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , unordered-containers
                     , utf8-string
                     , bytestring
                     , text
                     , directory
                     , filepath
                     , time
                     , wave
                     , lens
  default-language:    Haskell2010

executable VoiceroidSubtitleExoCreator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
                     , unordered-containers
                     , utf8-string
                     , bytestring
                     , text
                     , directory
                     , filepath
                     , time
                     , wave
                     , lens
                     , VoiceroidSubtitleExoCreator
  default-language:    Haskell2010

test-suite VoiceroidSubtitleExoCreator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , VoiceroidSubtitleExoCreator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/VoiceroidSubtitleExoCreator
